--- a/package.json
+++ b/package.json
@@ -14,15 +14,20 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "leaflet": "^1.9.4",
     "vue": "^3.5.26",
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
     "@tsconfig/node24": "^24.0.3",
     "@types/node": "^24.10.4",
+    "@types/leaflet": "^1.9.14",
     "@vitejs/plugin-vue": "^6.0.3",
     "@vue/tsconfig": "^0.8.1",
+    "autoprefixer": "^10.4.20",
     "npm-run-all2": "^8.0.4",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.14",
     "typescript": "~5.9.3",
     "vite": "^7.3.0",
     "vite-plugin-vue-devtools": "^8.0.5",
