--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,5 +1,4 @@
 {
-  "extends": "@tsconfig/node24/tsconfig.json",
   "include": [
     "vite.config.*",
     "vitest.config.*",
@@ -9,11 +8,12 @@
     "eslint.config.*"
   ],
   "compilerOptions": {
+    "composite": true,
     "noEmit": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
-
     "module": "ESNext",
     "moduleResolution": "Bundler",
+    "skipLibCheck": true,
     "types": ["node"]
   }
 }
