--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
   "dependencies": {
     "leaflet": "^1.9.4",
     "vue": "^3.5.26",
+    "vue-gtag": "^3.6.3",
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
     "@tsconfig/node24": "^24.0.3",
-    "@types/node": "^24.10.4",
     "@types/leaflet": "^1.9.14",
+    "@types/node": "^24.10.4",
     "@vitejs/plugin-vue": "^6.0.3",
     "@vue/tsconfig": "^0.8.1",
     "autoprefixer": "^10.4.20",
